<resources>
    <string name="app_name">Registros Akashicos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title"></string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Ver registros</string>
    <string name="menu_slideshow">Progreso evolutivo del yo</string>
    <string name="menu_personal">Datos personales</string>
    <string name="menu_perfildelalma">Perfil del alma</string>
    <string name="menu_perfildelalma2">Perfil del alma</string>
    <string name="menu_orientaciondelalma">Orientacion del alma</string>



    <string name="registrostitulo">Registros Akashicos</string>
    <string name="seccion1">Datos personales</string>
    <string name="seccion2">Orientacion del alma</string>
    <string name="seccion3">Progreso evolutivo del yo superior</string>
    <string name="seccion4">Perfil del alma 2º parte</string>
    <string name="seccion5">Perfil del alma 1º parte</string>
    <string name="seccion6">Generar PDF</string>



    //localicacion del alma//
    <string name ="pregunta1">¿Puedo localizar \n el alma en  los \n registros Akáshicos?</string>
    <string name ="pregunta2">¿Hay alguna otra \n alma o persona \n acechando a esta \n alma?</string>
    <string name ="pregunta3">¿Hay alguna otra \n alma enganchada \n a esta alma?</string>
    <string name ="pregunta4">¿Hay otra alma en \n esta persona? \n ¿Viene de esta vida \n o de otra?</string>
    <string name ="pregunta5">¿Busca esta alma \n ayuda para \n limpiarse de \n energías negativas?</string>


    <string name ="tipo1">Localizacion</string>
    <string name ="tipo2">Almas \n acechantes</string>
    <string name ="tipo3">Almas \n enganchadas</string>
    <string name ="tipo4">Posesiones</string>
    <string name ="tipo5">Busca ayuda</string>

    //datos personales//
    <string name ="nombre">Nombre</string>
    <string name ="direccion">Direccion</string>
    <string name ="lugardenacimiento">Lugar de nacimiento</string>
    <string name ="fechadenacimiento">Fecha de nacimiento</string>
    <string name ="telefono">Telefono</string>
    <string name ="email">Email</string>



    //perfil del alma//
    <string name ="tipo6">Genero \n\n</string>
    <string name ="tipo7">¿Hay alguna otra \n alma o persona \n acechando a esta \n alma?</string>
    <string name ="tipo8">Escuelas \n espirituales \n que tuvieron \n influencias \n positivas \n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n</string>
    <string name ="tipo9">¿Hay otra alma en \n esta persona? \n ¿Viene de esta vida \n o de otra?</string>
    <string name ="tipo10">¿Busca esta alma \n ayuda para \n limpiarse de \n energías negativas?</string>

    //perfil del alma2//
    <string name ="tipo11">Escuelas \n espirituales \n que tu vieron \n influencias  \n positivas</string>
    <string name ="tipo12">Ordenes \n espirituales \n (asisten a la \n humanidad con la \n oracion \n y el amor</string>


    //checkbox//
    <string name ="persia">Persia</string>
    <string name ="griega">Griega</string>
    <string name ="romana">Romana</string>
    <string name ="esenios">Esenios</string>
    <string name ="islam">Islam</string>
    <string name ="sufismo">Sufismo</string>
    <string name ="espiritista">Espiritista</string>
    <string name ="gnostismo">Gnostismo</string>
    <string name ="hebreos">Hebreos/ \n Cabala</string>
    <string name ="religionesafricanas">Religiones \n africanas</string>
    <string name ="culturamatriarcal">Culturas \n Matriarcales</string>
    <string name ="culturagitana">Cultura \n Gitana(eur)</string>
    <string name ="confucio">Confusio/ \n tao(ch) </string>
    <string name ="mayasaztecas">Mayas/ \n Aztecas </string>
    <string name ="jesus">Jesus(amor)</string>
    <string name ="Zenjapon">Zen(Japon)</string>
    <string name ="casadera">Casa de Ra \n (Egipto)</string>
    <string name ="bufaloblanco">Bufalo \n blanco</string>
    <string name ="odin">Odin \n(mit nordica)</string>
    <string name ="druidas">Druidas \n (celtas)</string>
    <string name ="shinto">Shinto \n (Japon)</string>
    <string name ="atlantidalemuria">Atlantida/ \n Lemuria </string>
    <string name ="buda">Buda \n Compasion</string>
    <string name ="krishna">Krishna \n (India)</string>
    <string name ="kahuna">Kahuna \n (Hawai) </string>
    <string name ="aborigenesaustralianos">Aborigenes \n australianos</string>
    <string name ="budismo">Budismo \n tibetano </string>
    <string name ="judio">Judio</string>
    <string name ="otros">otros</string>

</resources>
