<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />

    </group>

    <item android:title="@string/registrostitulo">
        <menu>
            <item
                android:id="@+id/nav_personal"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/seccion1" />
            <item
                android:id="@+id/nav_orientaciondelalma"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/seccion2" />
            <item
                android:id="@+id/nav_procesoevolutivo"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/seccion3" />

            <item
                android:id="@+id/nav_perfildelalma"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/seccion5" />
            <item
                android:id="@+id/nav_perfildelalma2"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/seccion4" />
            <item
                android:id="@+id/gen_pdf"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/seccion6" />


        </menu>
    </item>

</menu>
